--- a/Task2/Task2/Task2/View/MainWindow.xaml
+++ b/Task2/Task2/Task2/View/MainWindow.xaml
@@ -5,7 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Task2.Presentation.View" 
         xmlns:viewmodel="clr-namespace:Task2.Presentation.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
 
@@ -20,12 +19,12 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <ComboBox x:Name="CmbBoxBook" ItemsSource="{Binding Path=Catalogs}" SelectedItem="{Binding Path=SelectedCatalog}" SelectionChanged="CmbBoxBook_SelectionChanged" HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0"  VerticalAlignment="Center" Width="248">
+        <ComboBox x:Name="CmbBoxBook" ItemsSource="{Binding Path=Catalogs}" SelectedItem="{Binding Path=SelectedCatalog}"  HorizontalAlignment="Center" Grid.Column="0" Grid.Row="0"  VerticalAlignment="Center" Width="248">
 
         </ComboBox>
         <Label x:Name="LabelBook" Content="Books :"  Grid.Column="0" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Top" Margin="10,30,0,0"/>
 
-        <ComboBox  x:Name="CmbBoxUser" HorizontalAlignment="Center" ItemsSource="{Binding Path=Users}" SelectedItem="{Binding Path=SelectedUser}" SelectionChanged="CmbBoxUser_SelectionChanged" Grid.Column="2" Grid.Row="0"  VerticalAlignment="Center" Width="248"/>
+        <ComboBox  x:Name="CmbBoxUser" HorizontalAlignment="Center" ItemsSource="{Binding Path=Users}" SelectedItem="{Binding Path=SelectedUser}"  Grid.Column="2" Grid.Row="0"  VerticalAlignment="Center" Width="248"/>
         <Label x:Name="LabelUser" Content="Users :"  Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left"  VerticalAlignment="Top" Margin="10,30,0,0"/>
         <Button Grid.Column="1" Command="{Binding m_command_Borrow}" Content="Borrow" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Center" Width="77" Click="Button_Click"/>
         <Button Grid.Column="1" Command="{Binding m_command_Return}" Content="Return" HorizontalAlignment="Right" Grid.Row="1" VerticalAlignment="Center" Width="77"/>
@@ -34,7 +33,8 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="62*"></ColumnDefinition>
                     <ColumnDefinition Width="146*"></ColumnDefinition>
-                    <ColumnDefinition Width="47*"></ColumnDefinition>
+                    <ColumnDefinition Width="23*"></ColumnDefinition>
+                    <ColumnDefinition Width="24*"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
@@ -43,12 +43,12 @@
 
                 </Grid.RowDefinitions>
                 <Label Content="Title:" HorizontalAlignment="Center" Grid.Row="0" VerticalAlignment="Top" Height="26" Width="38"/>
-                <TextBox x:Name="TxtBoxEditTitle" Grid.Row="0" Grid.Column="1"  TextWrapping="Wrap" Text="{Binding Path=EditCatalog.Title}" Width="Auto" Height="26" Margin="0,0,16,40" Grid.RowSpan="2"/>
+                <TextBox x:Name="TxtBoxEditTitle" Grid.Row="0" Grid.Column="1"  TextWrapping="Wrap" Text="{Binding Path=EditCatalog.Title}" Width="Auto" Height="26" Margin="0,8,16,7"/>
 
                 <Label Content="Author:" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Height="26" Width="49"/>
-                <TextBox x:Name="TxtBoxEditAuthor" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=EditCatalog.Author}" Width="Auto" Height="26" Margin="0,0,16,40" Grid.RowSpan="2"/>
-                <Button x:Name="BtnEditBook" Grid.Column="2" Command="{Binding m_command_EditBook}" Content="Edit" HorizontalAlignment="Center"  Grid.Row="2" VerticalAlignment="Center" Height="20" Width="Auto"/>
-                <Button x:Name="BtnRemoveBook" Grid.Column="0" Command="{Binding m_command_RemoveBook}" Content="Remove" HorizontalAlignment="Center"  Grid.Row="2" VerticalAlignment="Center" Height="20" Width="Auto"/>
+                <TextBox x:Name="TxtBoxEditAuthor" Grid.Row="1" Grid.Column="1" TextWrapping="Wrap" Text="{Binding Path=EditCatalog.Author}" Width="Auto" Height="26" Margin="0,7,16,7"/>
+                <Button x:Name="BtnEditBook" Grid.Column="2" Command="{Binding m_command_EditBook}" Content="Edit" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Height="20" Width="Auto" Grid.ColumnSpan="2" Margin="11,0,0,0"/>
+                <Button x:Name="BtnRemoveBook" Command="{Binding m_command_RemoveBook}" Content="Remove" HorizontalAlignment="Center"  Grid.Row="2" VerticalAlignment="Center" Height="20" Width="Auto"/>
 
 
 
@@ -91,7 +91,7 @@
                         <ColumnDefinition Width="87*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition></RowDefinition>
+                        <RowDefinition Height="38.227"></RowDefinition>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
 
@@ -128,8 +128,8 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Label Content="Status of selected book :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,54,0,0" Grid.Column="1"/>
-        <Label x:Name="LabelCurrentStatus" Content="{Binding Path=Status}" HorizontalAlignment="Right" Margin="0,62,102,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Content="Status of selected book :" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Column="1" Margin="11,54,0,0"/>
+        <Label x:Name="LabelCurrentStatus" Content="{Binding Path=Status}" HorizontalAlignment="Right" Margin="0,62,38,0" VerticalAlignment="Top" Grid.Column="1"/>
 
 
 
